# emilua

./: README.adoc  appveyor.yml  meson.build  meson_options.txt
bytecode/: chan_op.lua  cond_wait.lua  coroutine_create.lua  coroutine_resume.lua  coroutine_wrap.lua  fiber_join.lua  ip_connect.lua  json_encode.lua  mode.lua  module_start_fn.lua  pcall.lua  read_all.lua  read_all_at.lua  read_at_least.lua  read_at_least_at.lua  require.lua  scanner_buffer.lua  scanner_buffered_line.lua  scanner_get_line.lua  scanner_new.lua  scanner_remove_line.lua  scanner_set_buffer.lua  scanner_with_awk_defaults.lua  scope_cleanup_pop.lua  spawn_start_fn.lua  start_fn.lua  var_args__retval1_to_error_.lua  var_args__retval1_to_error__fwd_retval234_.lua  var_args__retval1_to_error__fwd_retval23_.lua  var_args__retval1_to_error__fwd_retval2_.lua  write_all.lua  write_all_at.lua  write_at_least.lua  write_at_least_at.lua  xpcall.lua
doc/: antora.yml  meson.build  nav.adoc
doc/modules/ref/: all.adoc
doc/modules/tutorial/: all.adoc
example/native_plugin/: meson.build
example/native_plugin/src/: main.cpp
include/emilua/: actor.hpp  config.h.in  core.hpp  file_descriptor.hpp  future.hpp  meson.build  plugin.hpp  recursive_mutex.hpp  state.hpp  tls.hpp  unix.hpp  windows.hpp
pch/: pchheader.hpp
src/: actor.ypp  core.cpp  emilua_gperf.awk  fiber.cpp  file.cpp  file_descriptor.cpp  filesystem.cpp  future.cpp  ip.cpp  ipc_actor.cpp  json.cpp  main.ypp  mutex.cpp  pipe.cpp  plugin.cpp  recursive_mutex.cpp  state.ypp  stream.cpp  system.cpp  unix.cpp
src/ipc_actor/: sys_bindings.cpp
subprojects/: .gitignore
test/: actor27.lua  actor28.lua  actor29.lua  actor29.out  actor30.lua  actor7.out  byte_span11.out  byte_span12.out  byte_span5.out  cond3.out  coroutine_resume4.out  forbid_suspend_join.out  forbid_suspend_sleep_for.out  forbid_suspend_yield.out  future1.lua  future10.lua  future10.out  future2.lua  future3.lua  future4.lua  future4.out  future5.lua  future5.out  future6.lua  future6.out  future7.lua  future7.out  future8.lua  future8.out  future9.lua  interrupt10.out  interrupt11.out  interrupt14.out  interrupt16.out  interrupt7.out  interrupt8.out  interrupt9.out  ipc_actor_1_1.lua  ipc_actor_1_10.lua  ipc_actor_1_11.lua  (+103 more)
test/ipc_actor_1_21_foo/: init.lua
test/ipc_actor_1_22_foo/: init.lua
tool/: errno_sed.cpp  luabcxxd.cpp
(+48 files in other folders)
